syntax = "proto3";

package stats.message.recommendations;

option java_multiple_files = true;
option java_package = "ru.practicum.grpc.stats.recommendations";

message RecommendedEventProto {
  int64 event_id = 1;
  double score = 2;
}