syntax = "proto3";

package stats.service.dashboard;

import "stats/messages/user_prediction_request.proto";
import "stats/messages/interaction_count_request.proto";
import "stats/messages/similar_event_request.proto";
import "stats/messages/recommended_event.proto";

option java_multiple_files = true;
option java_package = "ru.practicum.grpc.stats.analyzer";

service RecommendationsController {
  rpc GetRecommendationsForUser (message.recommendations.UserPredictionsRequestProto)
      returns (stream message.recommendations.RecommendedEventProto);

  rpc GetSimilarEvents (message.recommendations.SimilarEventsRequestProto)
      returns (stream message.recommendations.RecommendedEventProto);

  rpc GetInteractionsCount (message.recommendations.InteractionsCountRequestProto)
      returns (stream message.recommendations.RecommendedEventProto);
}
